@@ -28,6 +28,29 @@ def course_view(request, id):
 		update_quiz(Quiz.objects.order_by('id')[len(Quiz.objects.all()) - 1].file.name, post)
 		return redirect('index')
 
+	if 'surveyFileUpdate' in request.POST:
+		post = request.POST.copy()
+		update_quiz(Survey.objects.order_by('id')[len(Survey.objects.all()) - 1].file.name, post)
+		return redirect('index')
+
+
+	if 'surveySubmit' in request.POST:
+		survey.save(course=course, prof=Professor.objects.get(id=request.user.id))
+
+		edit = SurveyEditForm
+
+		client = storage.Client()
+		bucket = client.get_bucket('lms-lite-2019')
+		blob = bucket.get_blob(course.course_name + '/Surveys/' +request.POST['assignment_name']+'/'+request.POST['assignment_name'].replace(' ', '_') +'_key.txt')
+		downloaded_blob = blob.download_as_string()
+
+		quizKey = NamedTemporaryFile(delete=False)
+		quizKey.write(bytes(downloaded_blob.decode('utf8'), 'UTF-8'))
+		quizKey.seek(0)
+
+		edit.file_address = quizKey.name
+		context_dict['surveyForm'] = edit
+
 
 	if 'quizSubmit' in request.POST:
 		quiz.save(course=course, prof=Professor.objects.get(id=request.user.id))
@@ -119,6 +142,7 @@ def quiz_list_view(request, cid):
 	quizzes = Student.objects.get(id=request.user.id).quizes.all()
 	context_dict['quizzes'] = quizzes
 	context_dict['course'] = course
+
 	return render(request, 'quiz_list_page.html', context_dict)
 
 
@@ -128,6 +152,7 @@ def pre_quiz_view(request,id, cid):
 	context_dict['quiz'] = quiz
 
 	return render(request,'pre_quiz_page.html', context_dict)
+
 
 def grade_view(request, cid):
 	context_dict = {}
@@ -179,8 +204,8 @@ def submission_view(request, cid, id):
 	if request.method == 'POST':
 		grade_form.save()
 
-
 	return render(request,'submission_view.html',context_dict)
+
 
 def homework_view(request,id):
 	context_dict = {}
@@ -191,10 +216,8 @@ def homework_view(request,id):
 	context_dict['homework'] = homework
 	context_dict['course'] = course
 
-
-
-
 	return render(request,'homework_list.html',context_dict)
+
 
 def homework_submit_view(request,id,cid):
 	context_dict = {}
