@@ -8,7 +8,7 @@
         </noscript>
     <h1>{{ survey.course_id.course_name }}</h1>
     <h2>{{ survey.assignment_name }}</h2>
-    <h3>{{ survey.open_date }} - {{ quiz.due_date }}</h3>
+    <h3>{{ survey.open_date }} - {{ survey.due_date }}</h3>
 
     <p>The following survey is for the {{ survey.course_id.course_name }} course. It shall
     be completed between<br> {{ survey.open_date }} - {{ survey.due_date }}. Once the survey is open, <br>
