@@ -1,4 +1,5 @@
 - version: unreleased
+- Survey editing for professors updates file(@Chino96)
 - created pre survey page(@kh06089)
 - Edit Survey Page edits file(@Chino96)
 - Created Homework view pages and student upload assignment(@kh06089)
